added flags for GC diagnostics